--- a/opTern02.html
+++ b/opTern02.html
@@ -10,7 +10,7 @@
     */
 
     //Entrada
-
+const distancia = Number(prompt("Qual a distância total percorrida pelo entregador para realizar a entrega ? "))
 
     //Processamento
 
